FSAR-263: Quote block - Fix icon cutting off on in between screen sizes

--- a/src/components/article/QuoteBlock/quoteBlock.scss
+++ b/src/components/article/QuoteBlock/quoteBlock.scss
@@ -18,7 +18,7 @@
     width: 2rem;
     height: 1.625rem;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     margin-right: 1rem;
   }
 
